# telegram-court-notifier

./: .env  .env.example  .gitignore  LICENSE  Pipfile  README.md  bot.py
delhi-hc-bot/: .env.example  Dockerfile  README.md  bot.py  pyproject.toml
sc-bot/: Dockerfile  README.md  bot.py  pyproject.toml
